--- a/SGI/templates/SGI/documentos/BotonesGestion/botonCrearDocumento.html
+++ b/SGI/templates/SGI/documentos/BotonesGestion/botonCrearDocumento.html
@@ -1,3 +1,3 @@
 {% if perms.SGI.add_documento %}
-<a class="far fa-custom fa-file-plus p-l-10" href="{% url 'SGI:documentos-crear' proceso.id  grupo_documento.id%}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear documento"></a>
+<a class="fad fa-custom fa-file-plus p-l-10" href="{% url 'SGI:documentos-crear' proceso.id  grupo_documento.id%}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Crear documento"></a>
 {% endif %}
