--- a/SGI/templates/SGI/documentos/resultado-busqueda-documentos.html
+++ b/SGI/templates/SGI/documentos/resultado-busqueda-documentos.html
@@ -4,22 +4,19 @@
 <title>{% block titulo %} Documentos {% endblock %}</title>
 
 {% block styles %}
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-brands.css' %}">
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-solid.css' %}">
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/theme-demo.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-duotone.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
     <link rel="mask-icon" href="{% static 'EVA/Plantilla/img/favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/miscellaneous/treeview/treeview.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'SGI/css/icono_documento.css' %}">
-     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
 {% endblock styles %}
 
 {% block main %}
     <div class="panel-container show">
         <div class="header">
             <h1 class="header-title">
-                <i class='far fa-search'></i> Resultados encontrados para: {{ texto_busqueda }} <span class='fw-300'></span>
+                <i class='fad fa-search'></i> Resultados encontrados para: {{ texto_busqueda }} <span class='fw-300'></span>
                 <br>
                 <br>
             </h1>
@@ -34,11 +31,11 @@
                                     {% if procesos_grupos_documentos %}
                                         {% for pgd in procesos_grupos_documentos %}
                                             <li>
-                                                <h1><i class='fa fa-md fal fa-cog'></i> {{ pgd.proceso }}</h1>
+                                                <h1><i class='fad fa-md fal fa-cog'></i> {{ pgd.proceso }}</h1>
                                                 <ul>
                                                     {% for gru in pgd.grupos %}
                                                         <li>
-                                                            <span class="col-md-4"><i class="fa fa-lg fa-file-alt"></i> {{ gru.grupo }}</span>
+                                                            <span class="col-md-4"><i class="fad fa-lg fa-file-alt"></i> {{ gru.grupo }}</span>
                                                             <ul>
                                                                 {% for doc in gru.documentos %}
                                                                         <li style="display: none">
@@ -53,13 +50,13 @@
                                                                                                     </div>
                                                                                                     <div class="col-md-5 p-r-10" style="text-align: end">
                                                                                                         {%  if perms.SGI.view_archivo %}
-                                                                                                        <a class="far fa-custom fa-eye" style="text-decoration: none !important;" {% for archivo in archivos %}{% if doc.documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                                        <a class="fad fa-custom fa-eye" style="text-decoration: none !important;" {% for archivo in archivos %}{% if doc.documento == archivo.documento %}href="{% url 'sgi:documentos-ver' archivo.id  %}" target="_blank" data-original-title="Ver" {% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                                         {% endif %}
                                                                                                         {% if perms.TalentoHumano.view_historial %}
-                                                                                                        <a class="far fa-custom fa-list-alt p-l-10" {% for hst in historial %}{% if hst.documento == doc.documento %} id="hst_{{ doc.documento.id }}" href="javascript:arbolDocumentos('doc_{{ doc.documento.id }}', 'hst_{{ doc.documento.id }}')" data-original-title="Historial"{% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                                        <a class="fad fa-custom fa-list-alt p-l-10" {% for hst in historial %}{% if hst.documento == doc.documento %} id="hst_{{ doc.documento.id }}" href="javascript:arbolDocumentos('doc_{{ doc.documento.id }}', 'hst_{{ doc.documento.id }}')" data-original-title="Historial"{% endif %}{% endfor %} data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                                         {% endif %}
                                                                                                         {% if perms.SGI.view_cadenaaprobacionencabezado %}
-                                                                                                        <a class="far fa-custom fa-link p-l-10" id="cadena_{{ doc.documento.id }}" {% if doc.documento.cadena_aprobacion %}href="javascript:abrirModalDetalleCadenaAprobacion('{% url 'sgi:cadenas-aprobacion-detalle' doc.documento.cadena_aprobacion_id %}')" {% endif %} data-original-title="Ver Cadena de Aprobación" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
+                                                                                                        <a class="fad fa-custom fa-link p-l-10" id="cadena_{{ doc.documento.id }}" {% if doc.documento.cadena_aprobacion %}href="javascript:abrirModalDetalleCadenaAprobacion('{% url 'sgi:cadenas-aprobacion-detalle' doc.documento.cadena_aprobacion_id %}')" {% endif %} data-original-title="Ver Cadena de Aprobación" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""></a>
                                                                                                         {% endif %}
                                                                                                         {% if gru.solo_proceso or perms.TalentoHumano.can_gestioncompletasgi or not gru.solo_proceso and pgd.proceso == colaborador.proceso %}
                                                                                                             {% if not perms.TalentoHumano.can_gestioncompletasgi %}
@@ -112,7 +109,7 @@
                                                                                                                                     {% include 'SGI/documentos/BotonesGestion/botonesArchivoEliminar.html' %}
                                                                                                                                 {% endif %}
                                                                                                                             {% endif %}
-                                                                                                                            <a class="far fa-custom fa-caret-square-down p-l-10" id="det_{{ hst.id }}" href="javascript:arbolDocumentos('arc_{{ hst.id }}', 'det_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
+                                                                                                                            <a class="fad fa-custom fa-caret-square-down p-l-10" id="det_{{ hst.id }}" href="javascript:arbolDocumentos('arc_{{ hst.id }}', 'det_{{ hst.id }}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Detalles"></a>
                                                                                                                         </div>
                                                                                                                      </div>
                                                                                                                 </div>
@@ -184,7 +181,7 @@
                                         {% endfor %}
                                     {% else %}
                                         <small>
-                                             <a class="far fa-3x far fa-times-circle" href="{% url 'sgi:index' %}"></a>
+                                             <a class="fad fa-3x fad fa-times-circle" href="{% url 'sgi:index' %}"></a>
                                         </small>
                                         <div class="panel-content p-t-0 p-b-0">
                                             <div class="panel-group">
