--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
@@ -10,7 +10,8 @@
     <div class="flex-1 fondo-autenticacion-proveedores">
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
             <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 ml-auto">
+                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-4"></div>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4">
                     <div class="card p-4 rounded-plus bg-faded" style="justify-content: center">
                         <div style="display: flex; justify-content: center;">
                                 <img src="{% static 'EVA/Plantilla/img/custom/proveedores/icono-proveedores.svg' %}" height="80" alt="logo proveedores">
