--- a/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/informacion_basica.html
@@ -73,7 +73,7 @@
                                                     {% select_tag departamentos 'departamento_rl' 'Seleccione un departamento' texto_label="Departamento de Expedición" value=proveedor.lugar_expedicion_rl.departamento_id  mensaje_validacion='Por favor seleccione un departamento' %}
                                                 </div>
                                                 <div class="form-group col-xl-4 col-lg-4 col-md-6 col-sm-6">
-                                                    {% select_tag municipios 'municipio_rl' 'Seleccione un municipio' texto_label="Ciudad de Expedición" value=proveedor.lugar_expedicion_rl_id  mensaje_validacion='Por favor seleccione un departamento' %}
+                                                    {% select_tag municipios_rl 'municipio_rl' 'Seleccione un municipio' texto_label="Ciudad de Expedición" value=proveedor.lugar_expedicion_rl_id  mensaje_validacion='Por favor seleccione un departamento' %}
                                                 </div>
                                             </div>
                                         </div>
