--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div id="panel-{{ objeto.id }}" class="panel">
-    <div class="panel-hdr {% if not objeto.completo and not objeto.id == 0 %}bg-danger-500 bg-danger-gradient{% elif objeto.modificado and solicitud_proveedor %}bg-info-500 bg-info-gradient{% else %}bg-primary-500 bg-primary-gradient{% endif %}">
+    <div class="panel-hdr {% if not objeto.completo and not objeto.id == 0 %}bg-danger-500 bg-danger-gradient{% elif objeto.modificado and solicitud_proveedor and estado_proveedor != 1 %}bg-info-500 bg-info-gradient{% else %}bg-primary-500 bg-primary-gradient{% endif %}">
         <h2>
             {% if objeto.id != 0 %}
                 {{ objeto.id }}.
