--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
@@ -28,7 +28,7 @@
                             <div style="display: flex; justify-content: center;">
                                 <h2 class="titulo-autenticacion">Inicio de Sesión</h2>
                             </div>
-                            <form action="{% url 'Administracion:proveedor-iniciar-sesion' %}" id="iniciar-sesion-proveedor-form" method="post" class="needs-validation" novalidate>
+                            <form action="{% url 'Administracion:proveedor-iniciar-sesion' %}" id="iniciar-sesion-proveedor-form" method="post" class="form-recaptcha" novalidate>
                                 {% csrf_token %}
                                 <div class="form-group">
                                     <label class="form-label" for="correo">Correo</label>
@@ -50,7 +50,7 @@
                                 <input id="datos_token" name="datos" hidden value="{{ datos }}">
                                 <div class="row no-gutters">
                                     <div class="col-lg-6 pl-lg-1 my-2">
-                                        <button id="js-login-btn" type="submit" class="btn btn-primary btn-block ">Iniciar sesión</button>
+                                        <button id="js-login-btn" type="button" class="btn btn-primary btn-block g-recaptcha" data-sitekey="{{ recaptcha_site_key }}"  data-callback='enviarConRecaptcha' data-expired-callback="resetRecaptcha" data-error-callback="errorRecaptcha">Iniciar sesión</button>
                                     </div>
                                     <div class="col-lg-12 pt-2 t-a-c">
                                         ¿No tiene una cuenta?&nbsp;&nbsp;<a href="{% url 'Administracion:proveedor-registro' %}" class="text-primary"> Registrarse</a>
@@ -66,4 +66,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block scripts %}
+    <script src="{% static 'EVA/Plantilla/js/custom/formRecaptcha.js' %}"></script>
+    <script src="https://www.google.com/recaptcha/api.js?hl=es" async defer></script>
 {% endblock %}
