--- a/Administracion/templates/Administracion/Tercero/Proveedor/certificaciones.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/certificaciones.html
@@ -44,7 +44,7 @@
                                                             {% endif %}
                                                         </td>
                                                         <td>
-                                                            <a class="far fa-2x fa-file-alt" target="_blank" href="{% url 'Administracion:proveedor-generar-certificacion' certificacion.id %}" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Certificacion"></a>
+                                                            <a class="far fa-2x fa-file-alt" href="javascript:abrirModalVistaPrevia('{% url 'Administracion:proveedor-generar-certificacion' certificacion.id %}')" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Certificacion"></a>
                                                         </td>
                                                     </tr>
                                                 {% endfor %}
@@ -60,6 +60,7 @@
             </div>
         </div>
     </div>
+    {% include 'EVA/_common/_vista_previa_modal.html' with titulo_modal='Vista Certificado' %}
 {% endblock %}
 {% block scripts %}
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.bundle.js' %}"></script>
@@ -68,5 +69,6 @@
     <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/ajaxDjango.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/datagrid/datatables/datatables.export.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/funcionesGenerales.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/controlDataTableCertificaciones.js' %}"></script>
 {% endblock %}
