--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaProcesos/index.html
@@ -52,12 +52,12 @@
                                                             <td>{{ proceso.objeto }}</td>
                                                             {% if perms.Financiero.view_flujocajaencabezado %}
                                                             <td>
-                                                                {% if proceso_usuario == proceso or perms.Financiero.can_gestion_flujos_de_caja %}
-                                                                    <span class="badge badge-primary">{{ proceso.flujocajaencabezado_set.first.estado }}</span>
+                                                                {% if proceso.proceso_usuario or perms.Financiero.can_gestion_flujos_de_caja %}
+                                                                    <span class="badge badge-primary">{{ proceso.proceso.flujocajaencabezado_set.first.estado }}</span>
                                                                 {% endif %}
                                                             </td>
                                                             <td>
-                                                                {% if proceso_usuario == proceso or perms.Financiero.can_gestion_flujos_de_caja %}
+                                                                {% if proceso.proceso_usuario or perms.Financiero.can_gestion_flujos_de_caja %}
                                                                     <a href="#" onclick="guardarRutaLocal('{% url 'Financiero:flujo-caja-procesos-detalle' proceso.id REAL fecha.year fecha.month %}')"><span class="badge badge-primary fw-300 ml-auto">Real</span><br></a>
                                                                     <a href="#" onclick="guardarRutaLocal('{% url 'Financiero:flujo-caja-procesos-detalle' proceso.id PROYECCION fecha.year fecha.month %}')"><span class="badge badge-primary fw-300 ml-auto">Proyección</span></a>
                                                                 {% endif %}
