--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/crear.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoOficios/crear.html
@@ -29,12 +29,17 @@
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <div class="form-row">
-                                                 <div class="col-md-6">
+                                                 <div class="{% if procesos %}col-md-4{% else %}col-md-6{% endif %}">
                                                     {% select_tag contratos 'contrato_id' 'Seleccione un contrato' texto_label="Contrato (Opcional)" value=consecutivo.contrato invalido=errores.contrato %}
                                                   </div>
-                                                <div class="col-md-6">
+                                                <div class="{% if procesos %}col-md-4{% else %}col-md-6{% endif %}">
                                                     {% input_text_tag 'destinatario' 'Destinatario' placeholder="Ingrese un destinatario" required="" maxlength="100" value=consecutivo.destinatario mensaje_validacion='Por favor digite un destinatario' invalido=errores.destinatario %}
                                                 </div>
+                                                {% if procesos %}
+                                                    <div class="col-md-4">
+                                                        {% select_tag procesos 'proceso_id' 'Seleccione un proceso' texto_label="Proceso"  required="" value=consecutivo.proceso invalido=errores.proceso mensaje_validacion='Por favor seleccione un proceso' %}
+                                                    </div>
+                                                {% endif %}
                                             </div>
                                         </div>
                                         <div class="form-group">
